[metadata]
name = ikpy
version = attr: ikpy.__version__
description = An inverse kinematics library aiming performance and modularity
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy
    scipy
    sympy

[options.extras_require]
plot = matplotlib; graphviz

[options.packages.find]
where=src

