[metadata]
name = ikpy
version = attr: ikpy.__version__
description = An inverse kinematics library aiming performance and modularity
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
home-page = https://github.com/Phylliade/ikpy

[options]
package_dir=
    =src
packages=find:
install_requires=
    numpy
    scipy
    sympy

[options.extras_require]
plot = matplotlib; graphviz

[options.packages.find]
where=src